Current Version: @@VERSION@@

ctags-5.5.1 (Sun Jun 22 2003)
* Fixed compilation error for uncommon hosts.
* Restored exit of program after --help, --license, and --version options [Bug
  #717311, #751240].
* Added support for tags for labels [PL/SQL].
* Fixed missing tags for Korn shell specific function definitions. [Sh]
* Fixed missing tags when semicolon separator appears [Fortran, Bug #734933].
* Fixed missing tags when endsubroutine keyword appears [Fortran, Bug #726712].
* Fixed missing tags for nested blocks [PL/SQL, Bug #722501].

ctags-5.5 (Tue Apr 1 2003)
* Changed kind indicator for methods from 'f' to 'm' [Tcl].
* Changed tags within interfaces to be disabled by default (like prototypes in
  C/C++) [Fortran].
* Removed explicit descriptions of individual --<LANG>-types options from
  --help output. See new --list-languages and --list-kinds options.
* Removed explicit list of supported languages and supported tag kinds and
  mapping patterns from man page. See new --list-languages, --list-kinds, and
  --list-maps options.
* Renamed --<LANG>-types option to --<LANG>-kinds (still accepts old name).
* Added --list-kinds option.
* Added --list-maps option.
* Added --list-languages option.
* Added support for dimensioned variables, contributed by Simon Bohlin [ASP].
* Added support for C# language.
* Added support for Erlang language, contributed by Brent Fulgham.
* Added support for HTML language files.
* Added support for JavaScript language files.
* Added support for SML (Standard ML) language, contributed by Venkatesh Prasad.
* Added mapping for .plx to Perl.
* Added tags for autocommand groups [Vim, Patch #664685].
* Added support for numerous language extensions [Fortran].
* Added '$', 'D', and 'd' in column 1 as comment characters [Fortran].
* Added special handling of --options=NONE to disable automatic reading of
  options from configuration files or environment.
* Added check for case-insensitive filenames to configure.